Fix positioning on mobile devices

--- a/maze/css/settings.css
+++ b/maze/css/settings.css
@@ -9,6 +9,10 @@
   --settings-button-size: 60px;
 }
 
+.settings {
+  overflow: hidden;
+}
+
 .settings-dialog {
   position: fixed;
   display: flex;
